# bazel_shell_completion

./: .bazelrc  .gitignore  .gitpod.yml  BAZEL.md  MODULE.bazel  WORKSPACE.bazel  requirements_lock.txt  versions.bzl
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/scripts/: initialize.sh  post-create.sh
bash/: BUILD.bazel  Dockerfile.jinja  template_versions.bzl
rules/docker/: defs.bzl
rules/docker/private/: BUILD.bazel  docker_runner.sh  rules_docker.bzl
rules/gcloud_cli/: BUILD.bazel  defs.bzl  versions.bzl
rules/gcloud_cli/private/: BUILD.bazel  BUILD.cli.bazel  BUILD.cli.bazel.template  TOOLCHAIN.md  gcloud_cli_repository.bzl  gcloud_cli_toolchain.bzl  gcloud_cli_toolchain_suite.bzl  gcloud_register_toolchains.bzl  repository.bzl  toolchains_repo.bzl  x_gcloud_toolchain_suite.bzl  x_google_cloud_strage.bzl  x_register_toolchains.bzl  x_toolchains_repo.bzl
rules/gcloud_cli/private/gcloud_upload/: BUILD.bazel  gcloud_upload.bzl  gcloud_upload.sh.template
tools/template/: BUILD.bazel  dockerfile.golden  dockerfile.jinja
