toolchain_type(
    name = "toolchain_type",
)

gcloud_cli_toolchain(
    name = "gcloud_cli_linux",
)

toolchain(
    name = "gcloud_cli_linux_toolchain",
    exec_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    target_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    toolchain = ":gcloud_cli_linux",
    toolchain_type = ":toolchain_type",
)
